--- a/Lesson2/style.css
+++ b/Lesson2/style.css
@@ -5,7 +5,7 @@
 
 .container{
     width: 80%;
-    background-color: #cccccc;
+
     margin: 0 auto;
     margin-top: 30px;
 }
@@ -13,7 +13,9 @@
 .btn, .change_text_btn, .change_text_btn_close{
     width: 200px;
     height: 50px;
-    background-color: grey;
+    background-color: rgb(233, 66, 66);
+    color: white;
+    border-radius: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,52 +24,62 @@
 
 .top_wrapper{
     display: flex;
-    width: 90%;
+    width: 1140px;
     margin: 0 auto;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items:center;
+    background-color: rgb(231, 144, 63);
+    height: 100px;
 }
 
 .list_text{
     resize: none;
+    width: 200px;
+    height: 50px;
 }
 
 .todo_item{
+    background-color: #fff;
     width: 90%;
     display: flex;
-    margin: 0 auto;
-    border: 1px solid red;
-    padding: 20px;
+    padding: 5px;
     align-items: center;
+    position: relative;
+    
 }
 
 .todo_text{
-    width: 70%;
+    width: 800px;
     margin-left: 20px;
     cursor: pointer;
+    padding: 10px;
+    padding-left: 30px;
 }
 
 .todo_tag{
-    width: 10%;
+    width: 100px;
+    height: 100%;
 }
 
-.todo_remove{
-    width: 30px;
-    height: 30px;
-    background-color: black;
+.todo_remove, .todo_full_remove{
+    width: 130px;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
 }
+.todo_remove{
+    margin-left: 100px; 
+}
 
-.todo, .restore{
-    list-style-type: none;
+.restore_heading{
+    margin-top: 30px;
 }
 
 .todo_restore{
     cursor: pointer;
+    width: 100px;
 }
 
 .background{
@@ -80,19 +92,58 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 
 .change_text{
     width: 300px;
-    height: 300px;
-    background-color: black;
+    height: 250px;
+    background-color: rgb(54, 207, 79);
+    border-radius: 20px;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .change_textarea{
     resize: none;
+    width: 200px;
+    height: 50px;
 }
+
+.todo_number{
+    position: absolute;
+    top: 50%;
+    margin-top: -1.3em;
+    background: #8FD4C1;
+    height: 2em;
+    width: 2em;
+    line-height: 2em;
+    border: .3em solid white;
+    text-align: center;
+    border-radius: 2em;
+    transition: all .3s ease-out;
+}
+
+.todo_item_wrapper{
+    display: flex;
+    align-items: center;
+    background-color: rgb(235, 183, 72);
+    /* border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px; */
+    border-radius: 19px;
+}
+
+.todo_date{
+    width: 100px;
+}
+
+.select, .select_find{
+    width: 100px;
+    height: 50px;
+    border-radius: 50px;
+    padding-left: 10px;
+}
+
