--- a/Lesson2/style.css
+++ b/Lesson2/style.css
@@ -4,7 +4,8 @@
 }
 
 .container{
-    width: 80%;
+    max-width: 1140px;
+    width: 100%;
 
     margin: 0 auto;
     margin-top: 30px;
@@ -28,7 +29,6 @@
     margin: 0 auto;
     justify-content: space-around;
     align-items:center;
-    background-color: rgb(231, 144, 63);
     height: 100px;
 }
 
@@ -49,11 +49,20 @@
 }
 
 .todo_text{
+    border: none;
+    background-color: rgb(235, 183, 72);
+
+
+
     width: 800px;
     margin-left: 20px;
     cursor: pointer;
     padding: 10px;
     padding-left: 30px;
+}
+
+.todo_text:focus{
+    outline:none
 }
 
 .todo_tag{
@@ -88,7 +97,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(100,100,100,0.1);
+    background-color: rgba(100,100,100,0.5);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -147,3 +156,21 @@
     padding-left: 10px;
 }
 
+.header{
+    background-color: rgb(231, 144, 63);
+
+}
+
+.changed{
+    color: red;
+    position: absolute;
+    bottom: 0;
+    font-size: 20px;
+    left: 50%;
+    margin-left: -100px;
+    transition: 1s;
+}
+
+.selected {
+    opacity: 0.6;
+}
