added changing tag

--- a/Lesson2/style.css
+++ b/Lesson2/style.css
@@ -174,3 +174,12 @@
 .selected {
     opacity: 0.6;
 }
+
+.todo_select{
+    outline: none;
+    background-color: inherit;
+    border: none;
+    appearance: none;
+    cursor: pointer;
+    margin-right: 10px;
+}
